--- a/Rock Papers Scissors Game/styles.css
+++ b/Rock Papers Scissors Game/styles.css
@@ -6,7 +6,10 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
+  height: 100vh;
+  display: grid;
+  place-content: top;
 }
 
 h1 {
