--- a/Rotating Image Gallery/styles.css
+++ b/Rotating Image Gallery/styles.css
@@ -16,3 +16,55 @@ body {
   background-color: #000000;
   overflow: hidden;
 }
+
+.container {
+  width: 200px;
+  height: 200px;
+  transform-style: preserve-3d;
+  transform: perspective(1000px) rotateY(0deg);
+  position: relative;
+}
+
+.container span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+}
+
+.container span img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.btn-container {
+  position: relative;
+  width: 80%;
+}
+
+.btn {
+  position: absolute;
+  bottom: -80px;
+  background-color: rgb(0, 183, 255);
+  padding: 10px 20px;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  background-color: rgb(0, 150, 255);
+}
+
+#prev {
+  left: 20%;
+}
+
+#next {
+  right: 20%;
+}
