--- a/Rotating Image Gallery/styles.css
+++ b/Rotating Image Gallery/styles.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
   background-color: #000000;
   overflow: hidden;
 }
@@ -23,6 +23,7 @@ body {
   transform-style: preserve-3d;
   transform: perspective(1000px) rotateY(0deg);
   position: relative;
+  transition: transform 0.7s;
 }
 
 .container span {
@@ -62,9 +63,9 @@ body {
 }
 
 #prev {
-  left: 20%;
+  left: 15%;
 }
 
 #next {
-  right: 20%;
+  right: -20%;
 }
