--- a/Rotating Image Gallery/styles.css
+++ b/Rotating Image Gallery/styles.css
@@ -13,7 +13,8 @@ body {
   text-align: center;
   align-items: center;
   height: 100vh;
-  background-color: #000000;
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   overflow: hidden;
 }
 
