--- a/Month Calendar/styles.css
+++ b/Month Calendar/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .calendar {
-  background-color: black;
+  background-color: #141414;
   color: lightgray;
   width: 450px;
   height: 520px;
