--- a/Age Calculator/styles.css
+++ b/Age Calculator/styles.css
@@ -1,63 +1,81 @@
-body {
+* {
   margin: 0;
-  padding: 20px;
-  font-family: "Montserrat", sans-serif;
-  background-color: #f7f7f7;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
 .container {
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-  padding: 20px;
+  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #0367a9, #90c2fc);
+  color: #fff;
+  padding: 10px;
+}
+
+.calculator {
+  width: 100%;
   max-width: 600px;
-  margin: 0 auto;
-  border-radius: 5px;
-  margin-top: 50px;
+  margin-left: 10%;
+  margin-top: 10%;
 }
 
-h1 {
-  font-size: 36px;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 20px;
+.calculator h1 {
+  font-size: 60px;
 }
 
-.form {
+.calculator h1 span {
+  color: #ffff76;
+}
+
+.input-box {
+  margin: 40px 0;
+  padding: 35px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.3);
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
-label {
-  font-weight: bold;
-  margin-bottom: 10px;
+.input-box input {
+  flex: 1;
+  margin-right: 20px;
+  padding: 14px 20px;
+  border: 0;
+  outline: 0;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
 }
 
-input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-  max-width: 300px;
-}
-
-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin-top: 10px;
+.input-box button {
+  background: #ffff76;
+  border: 0;
+  outline: 0;
+  padding: 15px 30px;
   cursor: pointer;
-  transition: background-color .3s ease ;
+  border-radius: 5px;
+  font-weight: 500;
+  color: #333;
 }
 
-button:hover {
-  background-color: #0062cc;
+.input-box input::-webkit-calendar-picker-indicator {
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: auto;
+  position: absolute;
+  height: auto;
+  background-position: calc(100% - 10px);
+  background-size: 30px;
+  cursor: pointer;
 }
 
 #result {
-  margin-top: 20px;
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 20px;
+}
+
+#result span {
+  color: #ffff76;
 }
