--- a/Basic-Calculator/styles.css
+++ b/Basic-Calculator/styles.css
@@ -13,7 +13,7 @@ body {
   padding: 20px;
   max-width: 400px;
   margin: 0 auto;
-  border: solid 1px #ccc;
+  border: solid 1px #a0a0a0;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   margin-top: 200px;
