--- a/Age Calculator/styles.css
+++ b/Age Calculator/styles.css
@@ -9,7 +9,7 @@
   width: 100%;
   min-height: 100vh;
   background: linear-gradient(135deg, #0367a9, #90c2fc);
-  color: #fff;
+  color: #ebebeb;
   padding: 10px;
 }
 
