--- a/Loan Calculator/styles.css
+++ b/Loan Calculator/styles.css
@@ -32,12 +32,7 @@ body {
 h1 {
   text-align: center;
   margin-bottom: 1rem;
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background: rgb(0, 160, 192);
   border-radius: 8px;
   font-size: 2rem;
   padding: 0.5rem;
