--- a/Pomodoro Timer/styles.css
+++ b/Pomodoro Timer/styles.css
@@ -2,12 +2,23 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  background-color: #2c3e50;
+}
+
 .container {
   max-width: 400px;
   margin: 0 auto;
   text-align: center;
   padding: 20px;
   font-family: "Roboto", sans-serif;
+  border: 1px solid #2c3e50;
+  background-color: hsl(0, 0%, 100%, 0.9);
+  border-radius: 8px;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.5);
 }
 
 .title {
