--- a/Speed Typing Game/styles.css
+++ b/Speed Typing Game/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: linear-gradient(62deg, hsl(22, 100%, 35%) 0%, #f7ce68 100%);
+  background-image: linear-gradient(62deg, hsl(22, 100%, 35%) 0%, #8d6700 100%);
   display: flex;
   min-height: 100vh;
   justify-content: center;
