--- a/Password Strength Meter/styles.css
+++ b/Password Strength Meter/styles.css
@@ -1,5 +1,64 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: hsl(261, 89%, 16%);
+  color: hsl(261, 89%, 90%);
+  text-align: center;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+h1 {
+  font-weight: 800;
+  margin-bottom: 1rem;
+}
+
+.strength-meter {
+  height: 2rem;
+  width: 90%;
+  border: 3px solid hsl(261, 89%, 57%);
+  border-radius: 1rem;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.strength-meter::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: calc(1% * var(--strength, 0));
+  background-color: hsl(261, 89%, 67%);
+  transition: width 0.3s ease-in-out;
+}
+
+.password {
+  width: 90%;
+  padding: 0.5rem 0.75rem;
+  color: white;
+  border: 1px solid hsl(261, 89%, 57%);
+  background-color: hsl(261, 89%, 25%);
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  outline: none;
+  text-align: center;
+}
+
+.password:focus {
+  border-color: hsl(261, 89%, 70%);
+}
+
+.suggestions > * {
+  color: hsl(261, 89%, 80%);
+  margin-top: 0.5rem;
 }
