--- a/Form Validator/styles.css
+++ b/Form Validator/styles.css
@@ -33,7 +33,8 @@ h1 {
 
 .form-group {
   position: relative;
-  padding-bottom: 2rem;
+  padding-bottom: 1.2rem;
+  margin-bottom: 1rem;
 }
 
 .form-group label {
@@ -69,6 +70,10 @@ h1 {
   bottom: 0;
   visibility: hidden;
   color: var(--error-clr);
+}
+
+.form-group.error small {
+  visibility: visible;
 }
 
 .form button {
